<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.DeliveryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="scroll">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/appColor" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/dimna"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_location"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/mango_jamshedpur"
                    android:textColor="#493D3D"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="@id/tv_location"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_lang"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cv_profile"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_lang" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_profile"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/btn_iv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_my_profile" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_search"
                    app:tint="@color/drawable_color" />

                <TextSwitcher
                    android:id="@+id/textSwitcher"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inAnimation="@anim/slide_in_down"
                    android:outAnimation="@anim/slide_out_up"
                    android:layout_marginStart="12dp"/>

                <View
                    android:layout_width="0.8dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end|center"
                    android:background="#875B5B"
                    android:layout_marginEnd="6dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/ic_mic"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </com.google.android.material.appbar.AppBarLayout>


    <com.amar.library.ui.StickyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:stickyHeader="@+id/rv_filters">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_randomMeal"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/iv_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rl_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="6dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#EDE8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:padding="2dp"
                    android:text="@string/what_s_on_your_mind"
                    android:textColor="#424A4E"
                    android:textSize="14sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />


            <RelativeLayout
                android:id="@+id/rl_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="6dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#EDE8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:padding="2dp"
                    android:text="@string/all_restaurants"
                    android:textColor="#424A4E"
                    android:textSize="14sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="false" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/restaurants_delivering"
                android:textColor="#6F7A80"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_restaurants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />

        </LinearLayout>
    </com.amar.library.ui.StickyScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>